Progress on Home Page

--- a/homePage.html
+++ b/homePage.html
@@ -23,6 +23,31 @@
             <li>Contact</li>
         </ul>
     </div>
+    <div class="mainPage">
+        <div id="header">
+            <h1>Who's Hector Macias?</h1>
+            <p>
+                Hi! I'm Hector, and becoming a Front End web developer
+                is one of my main objectives currently, I'm someone who
+                gets fascinated by the art of coding, Web developing
+                in my humble opinion is the perfect combination between
+                logic and creativity.
+            </p>
+            <div id="education">
+                <h2>Self-Taught through:</h2>
+                <img src="/resources/codecademy-logo.jpg" alt="codecademy">
+            </div>
+            <div>
+                <button id="hire">Hire Me</button>
+                <a id="git" href="https://github.com/HectorPzkmpfw">Git Hub account</a>
+            </div>
+            
+        </div>
+        <div id="banner">
+            <img src="/resources/Hector-banner.jpg" alt="Hector Macias">
+        </div>
+        
+    </div>
 
 </body>
 
