--- a/homePage.html
+++ b/homePage.html
@@ -14,41 +14,59 @@
 <body>
     <div class="navbar">
         <div id="headLogo">
-            <img src="/resources/hector-low-resolution-logo-color-on-transparent-background.png" alt="">
+            <img src="/resources/watch-logo.png" alt="">
         </div>
         <ul id="sections">
-            <li>About me</li>
-            <li>Projects</li>
-            <li>Skills</li>
-            <li>Contact</li>
+            <a href=""><li>About me</li></a>
+            <a href=""><li>Projects</li></a>
+            <a href=""><li>Skills</li></a>
+            <a href=""><li id="contact">Contact</li></a>
         </ul>
     </div>
     <div class="mainPage">
         <div id="header">
-            <h1>Who's Hector Macias?</h1>
+            <h1>Welcome!!</h1>
             <p>
                 Hi! I'm Hector, and becoming a Front End web developer
-                is one of my main objectives currently, I'm someone who
-                gets fascinated by the art of coding, Web developing
-                in my humble opinion is the perfect combination between
-                logic and creativity.
+                is my main objective!
             </p>
             <div id="education">
                 <h2>Self-Taught through:</h2>
                 <img src="/resources/codecademy-logo.jpg" alt="codecademy">
             </div>
-            <div>
-                <button id="hire">Hire Me</button>
+            <div id="links">
+                <a href="https://www.linkedin.com/in/hector-macias-7b6049188">
+                    <button id="hire">Hire Me</button>
+                </a>
                 <a id="git" href="https://github.com/HectorPzkmpfw">Git Hub account</a>
             </div>
-            
         </div>
         <div id="banner">
-            <img src="/resources/Hector-banner.jpg" alt="Hector Macias">
+            <img src="/resources/Hector-banner-PhotoRoom.png-PhotoRoom.png" alt="Hector Macias">
         </div>
-        
     </div>
+    <div class="projects">
+        <div id="projectList">
+            <h2>Projects</h2>
+            <ul>
+                <li>Fictional watch company website</li>
+                <li>"Tires to you" alternative website</li>
+                <li>Personal travel blog</li>
+            </ul>
+        </div>
+        <div id="skills">
+            <h2>Skills</h2>
+            <div class="logos">
+                <img class="skillLogo" src="/resources/html-logo.png" alt="html logo">
+                <img class="skillLogo" src="/resources/css-logo.png" alt="css logo">
+                <img class="skillLogo" src="/resources/JavaScript-logo.png" alt="JS logo">
+                <img class="skillLogo" src="/resources/Git-logo.png" alt="git logo">
+                <img class="skillLogo" src="/resources/database-logo.png" alt="database logo">
+                <img class="skillLogo" src="/resources/react-logo.png" alt="react logo">
+            </div>
 
+        </div>
+    </div>
 </body>
 
 </html>
