added links to Contact page, almost done!

--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/contact-style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Contact me</title>
 </head>
+
 <body>
-    
+    <div class="navbar">
+        <div id="headLogo">
+            <img src="/resources/watch-logo.png" alt="">
+        </div>
+        <ul id="sections">
+            <a href="">
+                <li>About me</li>
+            </a>
+            <a href="">
+                <li>Projects</li>
+            </a>
+            <a href="">
+                <li>Skills</li>
+            </a>
+            <a href="/contact.html">
+                <li id="contact">Contact</li>
+            </a>
+        </ul>
+    </div>
+    <div class="mainPage">
+        <div id="header">
+            <h1>Let's have a talk!</h1>
+        </div>
+        <div id="socialMedia">
+            <a href="https://www.linkedin.com/in/hector-macias-7b6049188">
+                <div class="contact">
+                    <img src="/resources/LinkedIn-logo.png" alt="LinkedInd logo">
+                </div>
+            </a>
+                <div id="gmail" class="contact">
+                    <img src="/resources/Gmail-logo.png" alt="Gmail logo">
+                    <h3>maciashector00@gmail.com</h3>
+                </div>
+            <a href="https://github.com/HectorPzkmpfw">
+                <div class="contact">
+                    <img src="/resources/GitHub-logo.png" alt="Github logo">
+                </div>
+            </a>
+            <a href="https://www.instagram.com/hectorhml/">
+                <div class="contact">
+                    <img src="/resources/Instagram-logo.png" alt="Instagram logo">
+                </div>
+            </a>
+
+        </div>
+
+    </div>
 </body>
+
 </html>
