--- a/homePage.html
+++ b/homePage.html
@@ -20,7 +20,7 @@
             <a href=""><li>About me</li></a>
             <a href=""><li>Projects</li></a>
             <a href=""><li>Skills</li></a>
-            <a href=""><li id="contact">Contact</li></a>
+            <a href="/contact.html"><li id="contact">Contact</li></a>
         </ul>
     </div>
     <div class="mainPage">
