logo redirects to home page

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,9 @@
 <body>
     <div class="navbar">
         <div id="headLogo">
-            <img src="/resources/watch-logo.png" alt="">
+            <a href="/homePage.html">
+                <img src="/resources/watch-logo.png" alt="Portfolio's logo">
+            </a>
         </div>
         <ul id="sections">
             <a href="">
