Added location section of the project!

--- a/homePage.html
+++ b/homePage.html
@@ -64,7 +64,11 @@
                 <img class="skillLogo" src="/resources/database-logo.png" alt="database logo">
                 <img class="skillLogo" src="/resources/react-logo.png" alt="react logo">
             </div>
-
+        </div>
+        <div id="maps">
+            <h1>This is where all the magic happens!</h1>
+            <hr>
+            <div id="map"></div>
         </div>
     </div>
 </body>
