building html for JS

--- a/homePage.html
+++ b/homePage.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <script src="/script/script.js" async defer></script>
     <title>Hector's Portfolio</title>
 </head>
 
@@ -42,7 +43,6 @@
             </div>
         </div>
         <div id="banner">
-            <img src="/resources/Hector-banner-PhotoRoom.png-PhotoRoom.png" alt="Hector Macias">
         </div>
     </div>
     <div class="projects">
