interactive code done, adding responsive styling

--- a/homePage.html
+++ b/homePage.html
@@ -17,12 +17,24 @@
         <div id="headLogo">
             <img src="/resources/watch-logo.png" alt="">
         </div>
-        <ul id="sections">
-            <a href=""><li>About me</li></a>
-            <a href=""><li>Projects</li></a>
-            <a href=""><li>Skills</li></a>
-            <a href="/contact.html"><li id="contact">Contact</li></a>
-        </ul>
+        <div id="sections">
+            <a href="">
+                <div class="navigation">About me</div>
+            </a>
+            <div class="dropdown"><span id="select">Projects</span>
+                <ul class="menu" id="work">
+                    <li>ST watches website</li>
+                    <li>"Tires to you" </li>
+                    <li>Traveling blog</li>
+                </ul>
+            </div>
+            <a href="">
+                <div class="navigation">Skills</div>
+            </a>
+            <a href="/contact.html">
+                <div class="navigation" id="contact">Contact</div>
+            </a>
+        </div>
     </div>
     <div class="mainPage">
         <div id="header">
