styling and resposive details

--- a/contact.html
+++ b/contact.html
@@ -18,16 +18,23 @@
         </div>
         <ul id="sections">
             <a href="">
-                <li>About me</li>
+                <div>About me</div>
             </a>
             <a href="">
-                <li>Projects</li>
+                <div class="dropdown"><span id="select">Projects</span></div>
+                <ul class="menu" id="work">
+                    <li>ST watches website</li>
+                    <li>"Tires to you" </li>
+                    <li>Traveling blog</li>
+                </ul>
+
             </a>
+
             <a href="">
-                <li>Skills</li>
+                <div>Skills</div>
             </a>
             <a href="/contact.html">
-                <li id="contact">Contact</li>
+                <div id="contact">Contact</div>
             </a>
         </ul>
     </div>
@@ -41,10 +48,10 @@
                     <img src="/resources/LinkedIn-logo.png" alt="LinkedInd logo">
                 </div>
             </a>
-                <div id="gmail" class="contact">
-                    <img src="/resources/Gmail-logo.png" alt="Gmail logo">
-                    <h3>maciashector00@gmail.com</h3>
-                </div>
+            <div id="gmail" class="contact">
+                <img src="/resources/Gmail-logo.png" alt="Gmail logo">
+                <h3>maciashector00@gmail.com</h3>
+            </div>
             <a href="https://github.com/HectorPzkmpfw">
                 <div class="contact">
                     <img src="/resources/GitHub-logo.png" alt="Github logo">
@@ -59,6 +66,7 @@
         </div>
 
     </div>
+    <script src="/script/contactScript.js"></script>
 </body>
 
 </html>
