last details before github upload

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         </div>
         <ul id="sections">
             <a href="">
-                <div>About me</div>
+                <div class="navigation">About me</div>
             </a>
             <a href="">
                 <div class="dropdown"><span id="select">Projects</span></div>
@@ -31,9 +31,9 @@
             </a>
 
             <a href="">
-                <div>Skills</div>
+                <div class="navigation">Skills</div>
             </a>
-            <a href="/contact.html">
+            <a id="contactSection" href="/contact.html">
                 <div id="contact">Contact</div>
             </a>
         </ul>
@@ -43,7 +43,7 @@
             <h1>Let's have a talk!</h1>
         </div>
         <div id="socialMedia">
-            <a href="https://www.linkedin.com/in/hector-macias-7b6049188">
+            <a class="socialIcon" href="https://www.linkedin.com/in/hector-macias-7b6049188">
                 <div class="contact">
                     <img src="/resources/LinkedIn-logo.png" alt="LinkedInd logo">
                 </div>
@@ -52,17 +52,27 @@
                 <img src="/resources/Gmail-logo.png" alt="Gmail logo">
                 <h3>maciashector00@gmail.com</h3>
             </div>
-            <a href="https://github.com/HectorPzkmpfw">
+            <a class="socialIcon" href="https://github.com/HectorPzkmpfw">
                 <div class="contact">
                     <img src="/resources/GitHub-logo.png" alt="Github logo">
                 </div>
             </a>
-            <a href="https://www.instagram.com/hectorhml/">
+            <a class="socialIcon" href="https://www.instagram.com/hectorhml/">
                 <div class="contact">
                     <img src="/resources/Instagram-logo.png" alt="Instagram logo">
                 </div>
             </a>
 
+        </div>
+        <div id="inputs">
+            <span>Name</span>
+            <input type="text">
+            <hr>
+            <span>e-mail</span>
+            <input type="text">
+            <hr>
+            <span>Inquiry / commennts</span>
+            <input type="text">
         </div>
 
     </div>
